Cleaned the code following FindBugs suggestions
git-svn-id: https://svn.apache.org/repos/asf/directory/trunks/shared@491461 13f79535-47bb-0310-9956-ffa450edef68